syntax = "proto2";

package atsc;

message LoadSwitchUpdate {
  optional bool a = 1;
  optional bool b = 2;
  optional bool c = 3;
}

enum PhaseState {
  STOP = 0;
  MIN_STOP = 2;
  RCLR = 4;
  CAUTION = 6;
  EXTEND = 8;
  GO = 10;
  PCLR = 12;
  WALK = 14;
  FYA = 16;
}

enum PhaseStatus {
  INACTIVE = 0;
  NEXT = 1;
  LEADER = 2;
  SECONDARY = 3;
}

message PhaseUpdate {
  optional PhaseStatus status = 1;
  optional bool ped_service = 2;
  optional PhaseState state = 3;
  optional float time_upper = 4;
  optional float time_lower = 5;
  optional uint32 detections = 6;
  optional uint32 vehicle_calls = 7;
  optional uint32 ped_calls = 8;
}

message ControlUpdate {
  repeated PhaseUpdate phase = 2;
  repeated LoadSwitchUpdate ls = 3;
}

enum FlashMode {
  RED = 1;
  YELLOW = 2;
}

message PhaseInfo {
  optional FlashMode flash_mode = 1;
  optional sint32 fya_setting = 2;
  optional uint32 vehicle_ls = 3;
  optional uint32 ped_ls = 4;
}

message ControlInfo {
  required uint32 version = 1;
  optional string name = 2;
  repeated PhaseInfo phases = 8;
}
